remove secret files2

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,16 @@ node_modules/
 .htaccess
 wp-config.php
 .DS_STORE
+wp-blog-header.php
+index.php
+wp-activate.php
+wp-comments-post.php
+wp-cron.php
+wp-links-opml.php
+wp-load.php
+wp-login.php
+wp-mail.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
